--- a/show.html
+++ b/show.html
@@ -6,50 +6,50 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Show room - BaderSur, Demos</title>
-	<meta name="description" content="Provides a list of websites to show them in action.">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-	<link rel="stylesheet" href="css/main.css">
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<!--<script src="js/vendors/jquery.min.js"></script>-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<!--<script src="js/vendors/bootstrap.min.js"></script>-->
+	<meta name="author" content="Bader Nasser Al-Hashmi, @BaderSur">
+
+	<title>Show room (Demos) - BaderSur</title>
+	<meta name="description" content="Showing JavaScript in action.">
+
+	<script src="/js/vendors/HTMLImports.min.js"></script>
+	<link rel="import" href="/shared/header.html">
 </head>
 
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
-            </div>
+				<a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
+			</div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="top-menu">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li class="active"><a href="show.html">Show room</a></li>
-                    <li><a href="courses.html">Completed courses</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="top-menu">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li class="active"><a href="show.html">Show room</a></li>
+					<li><a href="courses.html">Completed courses</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
 
 
-	<section class="container">
-
+	<main class="container">
+		<h1>Demos</h1>
+		
 		<div class="row">
 			<div class="col-sm-6">
-				<h1><a href="nearme.html">Near Me</a></h1>
+				<h2><a href="nearme.html">Near Me</a></h2>
 				<a href="nearme.html">
 					<img alt="near me image" src="images/nearme.jpg" class="img-responsive">
 				</a>
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="col-sm-6">
-				<h1><a href="reader.html">Reader</a></h1>
+				<h2><a href="reader.html">Reader</a></h2>
 				<a href="reader.html">
 					<img alt="Innovation Cloud image" src="images/show-reader.jpg" class="img-responsive">
 				</a>
@@ -72,8 +72,9 @@
 			</div>
 		</div>
 
-	</section>
+	</main>
 
+	<link rel="import" href="/shared/footer.html">
 </body>
 
 </html>
