Update url for logging purpose

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</ul>
 
 				<h2>Note</h2>
-				<p>I'm using Google cloud to host <a href="https://bader-sur.appspot.com">my new web application</a> built using Python
+				<p>I'm using Google cloud to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using Python
 					so I rarely update this website.</p>
 			</section>
 
