--- a/courses.html
+++ b/courses.html
@@ -46,6 +46,221 @@
 	<main class="container">
 		<noscript>
 			<p>Please enable JavaScript.</p>
+
+			<h1 class="text-center">Completed online courses</h1>
+
+			<h2 class="extra-padding">Microsoft Virtual Academy
+
+				<small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
+
+			</h2>
+			<div class="row">
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/mean-stack-jump-start-8442">
+
+						<div class="card inprogress" title="Learning in progress...">
+
+							MEAN Stack Jump Start
+
+							<span>⤧</span>
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/mongodb-and-redis-caching-8654">
+
+						<div class="card">
+
+							MongoDB and Redis Caching
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-angular-20-16540">
+
+						<div class="card">
+
+							Introduction to Angular 2.0
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/using-nodejs-with-visual-studio-code-13920">
+
+						<div class="card">
+
+							Using Node.js with Visual Studio Code
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-aspnet-core-10-16841">
+
+						<div class="card">
+
+							Introduction to ASP.NET Core 1.0
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/querying-microsoft-sql-server-2012-databases-jump-start-8241">
+
+						<div class="card">
+
+							Querying Microsoft SQL Server 2012 Databases Jump Start
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254">
+
+						<div class="card">
+
+							Programming in C# Jump Start
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/developer-productivity-whats-new-in-c-6-8733">
+
+						<div class="card">
+
+							Developer Productivity: What's New in C# 6
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://mva.microsoft.com/en-US/training-courses/the-modern-web-platform-jump-start-8337">
+
+						<div class="card">
+
+							The Modern Web Platform Jump Start
+
+						</div>
+					</a>
+				</div>
+
+			</div>
+
+			<h2 class="extra-padding">Udacity
+
+				<small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
+
+			</h2>
+			<div class="row">
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.udacity.com/course/web-development--cs253">
+
+						<div class="card">
+
+							Web Development
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.udacity.com/course/developing-android-apps--ud853">
+
+						<div class="card">
+
+							Developing Android Apps
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+
+						<div class="card">
+
+							Intro to Computer Science
+
+						</div>
+					</a>
+				</div>
+
+			</div>
+
+			<h2 class="extra-padding">Codecademy
+
+				<small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
+
+			</h2>
+			<div class="row">
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.codecademy.com/en/skills/make-an-interactive-website">
+
+						<div class="card">
+
+							Make an Interactive Website
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.codecademy.com/learn/learn-angularjs">
+
+						<div class="card">
+
+							Learn AngularJS 1.X
+
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.codecademy.com/learn/php">
+
+						<div class="card">
+
+							PHP
+
+						</div>
+					</a>
+				</div>
+
+			</div>
+
+			<h2 class="extra-padding">NewCircle Training
+
+			</h2>
+			<div class="row">
+
+				<div class="col-sm-6 col-md-4">
+					<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">
+
+						<div class="card">
+
+							Android Bootcamp Series 2012
+
+						</div>
+					</a>
+				</div>
+
+			</div>
+
 		</noscript>
 	</main>
 
