--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
 			<section class="col-sm-8">
 				<h1>About me</h1>
-				<p>I'm Bader Nasser Al-Hashmi, from a city in Oman called Sur.</p>
-				<p>I'm a computer engineer and a developer.</p>
+				<p>I'm <strong>Bader</strong> Nasser Al-Hashmi, from a city in Oman called <strong>Sur</strong>.</p>
+				<p>I'm a computer engineer and a developer. You may <a href="https://discussions.udacity.com/users/badersur">find me on 
+					Udacity Discussion Forum</a> answering questions about <a href="https://discussions.udacity.com/c/standalone-courses/web-development">Web development</a>.</p>
 
 				<h2>Skills</h2>
 				<ul>
@@ -70,7 +71,7 @@
 				</ul>
 
 				<h2>Note</h2>
-				<p>I'm using Google cloud to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using Python
+				<p>I'm using Google App Engine to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using Python
 					so I rarely update this website.</p>
 			</section>
 
