--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
 	<title>Completed Online Courses - BaderSur</title>
 	<meta name="description" content="A list of some of the online courses that @BaderSur has completed!">
 
-	<script src="/js/vendors/HTMLImports.min.js"></script>
+	<script async src="/js/vendors/HTMLImports.min.js"></script>
 	<link rel="import" href="/shared/header.html">
 </head>
 
@@ -26,16 +26,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-				<a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
+				<a class="navbar-brand" href="/">Bader<span>Sur</span></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-menu">
 				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+					<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="show.html">Show room</a></li>
-					<li class="active"><a href="courses.html">Completed courses</a></li>
+					<li class="active"><a href="#">Completed courses</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
