--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Personal info. - BaderSur</title>
 	<meta name="description" content="Information about @BaderSur like his skills which may help him to conquer this world.">
 
-	<script src="/js/vendors/HTMLImports.min.js"></script>
+	<script async src="/js/vendors/HTMLImports.min.js"></script>
 	<link rel="import" href="/shared/header.html">
 </head>
 
@@ -26,13 +26,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">Bader<span>Sur</span></a>
+				<a class="navbar-brand" href="/">Bader<span>Sur</span></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-menu">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+					<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="show.html">Show room</a></li>
 					<li><a href="courses.html">Completed courses</a></li>
