--- a/courses.html
+++ b/courses.html
@@ -267,7 +267,7 @@
 	<link rel="import" href="/shared/footer.html">
 	<script src="/js/vendors/nunjucks.min.js"></script>
 	<script src="/js/vendors/spin.min.js"></script>
-	<script src="/js/courses.js"></script>
+	<script async src="/js/courses.js"></script>
 </body>
 
 </html>
