--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h1>About me</h1>
 				<p>I'm <strong>Bader</strong> Nasser Al-Hashmi, from a city in Oman called <strong>Sur</strong>.</p>
 				<p>I'm a computer engineer and a developer. You may <a href="https://discussions.udacity.com/users/badersur">find me on 
-					Udacity Discussion Forum</a> answering questions about <a href="https://discussions.udacity.com/c/standalone-courses/web-development">Web development</a>.</p>
+					Udacity Discussion Forum</a> answering questions about <a href="https://discussions.udacity.com/c/standalone-courses/web-development">web development</a>.</p>
 
 				<h2>Skills</h2>
 				<ul>
