Update projects page

--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
 
 	<main class="container">
 		<noscript>
-			<p>Please enable JavaScript.</p>
+			<strong>Please enable JavaScript!</strong>
 		</noscript>
 	
 		<h1 class="text-center">Completed online courses</h1>
