--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 	</nav>
 
 	<main class="container">
+		<noscript>
+			<strong>Please enable JavaScript!</strong>
+		</noscript>
+		
 		<div class="row">
 
 			<section class="col-sm-8">
@@ -71,8 +75,8 @@
 				</ul>
 
 				<h2>Note</h2>
-				<p>I'm using Google App Engine to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using Python
-					so I rarely update this website.</p>
+				<p>I'm using Google App Engine to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using
+					Python so I rarely update this website.</p>
 			</section>
 
 			<aside class="col-sm-4">
