--- a/show.html
+++ b/show.html
@@ -45,8 +45,10 @@
 
 
 	<main class="container">
-		<h1>Demos</h1>
-		
+		<noscript>
+			<strong>Please enable JavaScript!</strong>
+		</noscript>
+
 		<div class="row">
 			<div class="col-sm-6">
 				<h2><a href="nearme.html">Near Me</a></h2>
