More tweaks (round 2)

--- a/shared/styles.html
+++ b/shared/styles.html
@@ -6,7 +6,7 @@
 <!--<link rel="stylesheet" href="/css/vendors/bootstrap.min.css">-->
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<link href="/css/vendors/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/vendors/ie10-viewport-bug-workaround.css">
 
 <!-- Custom styles -->
 <link rel="stylesheet" href="/css/main.css">
