--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Information about @BaderSur like his skills which may help him to conquer this world.">
 
 	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/header.html">
+	<link rel="import" href="/shared/styles.html">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
 		</div>
 	</main>
 
-	<link rel="import" href="/shared/footer.html">
+	<link rel="import" href="/shared/scripts.html">
 </body>
 
 </html>
