--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Some projects that @BaderSur has done so far.">
 
 	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/header.html">
+	<link rel="import" href="/shared/styles.html">
 </head>
 
 <body>
@@ -166,7 +166,7 @@
 		</div>
 	</main>
 
-	<link rel="import" href="/shared/footer.html">
+	<link rel="import" href="/shared/scripts.html">
 </body>
 
 </html>
