--- a/shared/scripts.html
+++ b/shared/scripts.html
@@ -2,10 +2,11 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/vendors/jquery.min.js"><\/script>')</script>
+<!--<script src="/js/vendors/jquery.min.js"></script>-->
+
 <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-<!--<script src="/js/vendors/bootstrap.min.js"></script>-->
+<!--<script async src="/js/vendors/bootstrap.min.js"></script>-->
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
