--- a/show.html
+++ b/show.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Showing JavaScript in action.">
 
 	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/header.html">
+	<link rel="import" href="/shared/styles.html">
 </head>
 
 <body>
@@ -76,7 +76,7 @@
 
 	</main>
 
-	<link rel="import" href="/shared/footer.html">
+	<link rel="import" href="/shared/scripts.html">
 </body>
 
 </html>
