--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
 
 				<div class="panel panel-info">
 					<div class="panel-heading">
-						<h3 class="panel-title"><a href="https://bader-sur.appspot.com/?gh-projects">Python web application</a></h3>
+						<h3 class="panel-title"><a href="https://bader-sur.appspot.com/?gh-projects">Personal web application</a></h3>
 					</div>
 					<div class="panel-body">
 						<p>A <a href="https://bader-sur.appspot.com/?gh-projects">web application</a> hosted on Google App Engine which has a
@@ -107,8 +107,6 @@
 
 			</div>
 
-			<!--<div class="clearfix"></div>-->
-
 			<div class="col-sm-12 col-md-4">
 				<div class="row">
 
@@ -116,6 +114,17 @@
 					<div class="col-sm-6 col-md-12">
 
 						<div class="panel panel-danger">
+							<div class="panel-heading">
+								<h3 class="panel-title"><a href="https://github.com/badersur/chirp">Chirp</a></h3>
+							</div>
+							<div class="panel-body">
+								<p>
+									A <a href="https://github.com/badersur/chirp">Twitter clone</a> using the MEAN stack (MongoDB, Express, Angular & Node).
+								</p>
+							</div>
+						</div>
+
+						<div class="panel panel-warning">
 							<div class="panel-heading">
 								<h3 class="panel-title"><a href="https://play.google.com/store/apps/details?id=om.mooniat.surnews">Sur News</a></h3>
 							</div>
@@ -126,7 +135,7 @@
 							</div>
 						</div>
 
-						<div class="panel panel-warning">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3 class="panel-title">Yamba</h3>
 							</div>
@@ -139,7 +148,8 @@
 
 
 					<div class="col-sm-6 col-md-12">
-						<div class="panel panel-primary">
+						
+						<div class="panel panel-success">
 							<div class="panel-heading">
 								<h3 class="panel-title">E-Bookshop</h3>
 							</div>
@@ -148,7 +158,7 @@
 							</div>
 						</div>
 
-						<div class="panel panel-success">
+						<div class="panel panel-info">
 							<div class="panel-heading">
 								<h2 class="panel-title">
 									<a href="https://github.com/badersur/mimic">mimic</a></h2>
