--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 							</picture>
 						</a>
 						<p class="extra-top-margin-15">
-							A weather forecast app. that utilizes <a href="http://openweathermap.org/API">OpenWeatherMap's API</a> and using the
+							An <a href="https://play.google.com/store/apps/details?id=om.mooniat.sunshine">Android weather forecast app</a> that utilizes <a href="http://openweathermap.org/API">OpenWeatherMap's API</a> and using the
 							knowledge gained from Udacity's course: <a href="https://www.udacity.com/course/new-android-fundamentals--ud851">Developing Android Apps</a>							(and other resources!)
 						</p>
 					</div>
@@ -96,10 +96,10 @@
 
 				<div class="panel panel-info">
 					<div class="panel-heading">
-						<h3 class="panel-title"><a href="https://bader-sur.appspot.com/?gh-projects">Personal web application</a></h3>
+						<h3 class="panel-title"><a href="https://bader-sur.appspot.com/?gh-projects">Personal web app</a></h3>
 					</div>
 					<div class="panel-body">
-						<p>A <a href="https://bader-sur.appspot.com/?gh-projects">web application</a> hosted on Google App Engine which has a
+						<p>A <a href="https://bader-sur.appspot.com/?gh-projects">web app</a> hosted on Google App Engine which has a
 							blog, a registration system and RESTful APIs in JSON & XML formats. It utilizes memcache to have almost zero read
 							from Google Datastore in order to speed up data retrieval</p>
 					</div>
@@ -130,7 +130,7 @@
 							</div>
 							<div class="panel-body">
 								<p>
-									An <a href="https://play.google.com/store/apps/details?id=om.mooniat.surnews">Android application</a> that fetches
+									An <a href="https://play.google.com/store/apps/details?id=om.mooniat.surnews">Android app</a> that fetches
 									local news about Sur using <a href="https://jsoup.org/">jsoup library</a></p>
 							</div>
 						</div>
@@ -140,7 +140,7 @@
 								<h3 class="panel-title">Yamba</h3>
 							</div>
 							<div class="panel-body">
-								<p>A micro blogging app. created while learning from
+								<p>A micro blogging app created while learning from
 									<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">Android Bootcamp Series</a></p>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 								<h3 class="panel-title">E-Bookshop</h3>
 							</div>
 							<div class="panel-body">
-								<p>A website created with my colleague for the university's database course</p>
+								<p>A website created with my colleague for university's database course</p>
 							</div>
 						</div>
 
