--- a/courses.html
+++ b/courses.html
@@ -2,191 +2,273 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="author" content="Bader Nasser Al-Hashmi, @BaderSur">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="author" content="Bader Nasser Al-Hashmi, @BaderSur">
 
-	<title>Completed Online Courses - BaderSur</title>
-	<meta name="description" content="A list of some of the online courses that @BaderSur has completed!">
+    <title>Completed Online Courses - BaderSur</title>
+    <meta name="description" content="A list of some of the online courses that @BaderSur has completed!">
 
-	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/styles.html">
+    <script async src="/js/vendors/HTMLImports.min.js"></script>
+    <link rel="import" href="/shared/styles.html">
 </head>
 
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-				<a class="navbar-brand" href="/">Bader<span>Sur</span></a>
-			</div>
+                <a class="navbar-brand" href="/">Bader<span>Sur</span></a>
+            </div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="top-menu">
-				<ul class="nav navbar-nav">
-					<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="show.html">Show room</a></li>
-					<li class="active"><a href="#">Completed courses</a></li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="top-menu">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="show.html">Show room</a></li>
+                    <li class="active"><a href="#">Completed courses</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
-	<main class="container">
-		<noscript>
-			<strong>Please enable JavaScript!</strong>
-		</noscript>
+    <main class="container">
+        <noscript>
+            <strong>Please enable JavaScript!</strong>
+        </noscript>
 
-		<h1 class="text-center">Completed online courses</h1>
-		<div class="row extra-top-padding-60">
-			<h2 class="col-xs-12">Microsoft Virtual Academy
-				<small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
-			</h2>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/mean-stack-jump-start-8442">
-					<div class="card inprogress" title="Learning in progress...">
-						MEAN Stack Jump Start<span>⤧</span>
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/mongodb-and-redis-caching-8654">
-					<div class="card">
-						MongoDB and Redis Caching
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-angular-20-16540">
-					<div class="card">
-						Introduction to Angular 2.0
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/using-nodejs-with-visual-studio-code-13920">
-					<div class="card">
-						Using Node.js with Visual Studio Code
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-aspnet-core-10-16841">
-					<div class="card">
-						Introduction to ASP.NET Core 1.0
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/querying-microsoft-sql-server-2012-databases-jump-start-8241">
-					<div class="card">
-						Querying Microsoft SQL Server 2012 Databases Jump Start
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254">
-					<div class="card">
-						Programming in C# Jump Start
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/developer-productivity-whats-new-in-c-6-8733">
-					<div class="card">
-						Developer Productivity: What's New in C# 6
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://mva.microsoft.com/en-US/training-courses/the-modern-web-platform-jump-start-8337">
-					<div class="card">
-						The Modern Web Platform Jump Start
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="row extra-top-padding-60">
-			<h2 class="col-xs-12">Udacity
-				<small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
-			</h2>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.udacity.com/course/web-development--cs253">
-					<div class="card">
-						Web Development
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.udacity.com/course/developing-android-apps--ud853">
-					<div class="card">
-						Developing Android Apps
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
-					<div class="card">
-						Intro to Computer Science
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="row extra-top-padding-60">
-			<h2 class="col-xs-12">Codecademy
-				<small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
-			</h2>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.codecademy.com/en/skills/make-an-interactive-website">
-					<div class="card">
-						Make an Interactive Website
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.codecademy.com/learn/learn-angularjs">
-					<div class="card">
-						Learn AngularJS 1.X
-					</div>
-				</a>
-			</div>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.codecademy.com/learn/php">
-					<div class="card">
-						PHP
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="row extra-top-padding-60">
-			<h2 class="col-xs-12">NewCircle Training
-			</h2>
-			<div class="col-sm-6 col-md-4">
-				<a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">
-					<div class="card">
-						Android Bootcamp Series 2012
-					</div>
-				</a>
-			</div>
-		</div>
+        <h1 class="text-center">Completed online courses</h1>
 
-	</main>
+        <div class="row extra-top-padding-60">
+            <h2 class="col-xs-12">
+                Microsoft Virtual Academy
 
-	<link rel="import" href="/shared/scripts.html">
-	<script src="/js/vendors/nunjucks.min.js"></script>
-	<script src="/js/vendors/spin.min.js"></script>
-	<script async src="/js/courses.js"></script>
+                <small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
+
+            </h2>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/mean-stack-jump-start-8442">
+
+                    <div class="card">
+
+                        MEAN Stack Jump Start
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/mongodb-and-redis-caching-8654">
+
+                    <div class="card">
+
+                        MongoDB and Redis Caching
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-angular-20-16540">
+
+                    <div class="card">
+
+                        Introduction to Angular 2.0
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/using-nodejs-with-visual-studio-code-13920">
+
+                    <div class="card">
+
+                        Using Node.js with Visual Studio Code
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-aspnet-core-10-16841">
+
+                    <div class="card">
+
+                        Introduction to ASP.NET Core 1.0
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/querying-microsoft-sql-server-2012-databases-jump-start-8241">
+
+                    <div class="card">
+
+                        Querying Microsoft SQL Server 2012 Databases Jump Start
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254">
+
+                    <div class="card">
+
+                        Programming in C# Jump Start
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/developer-productivity-whats-new-in-c-6-8733">
+
+                    <div class="card">
+
+                        Developer Productivity: What's New in C# 6
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://mva.microsoft.com/en-US/training-courses/the-modern-web-platform-jump-start-8337">
+
+                    <div class="card">
+
+                        The Modern Web Platform Jump Start
+
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="row extra-top-padding-60">
+            <h2 class="col-xs-12">
+                Udacity
+
+                <small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
+
+            </h2>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.udacity.com/course/web-development--cs253">
+
+                    <div class="card">
+
+                        Web Development
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.udacity.com/course/developing-android-apps--ud853">
+
+                    <div class="card">
+
+                        Developing Android Apps
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+
+                    <div class="card">
+
+                        Intro to Computer Science
+
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="row extra-top-padding-60">
+            <h2 class="col-xs-12">
+                Codecademy
+
+                <small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
+
+            </h2>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.codecademy.com/en/skills/make-an-interactive-website">
+
+                    <div class="card">
+
+                        Make an Interactive Website
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.codecademy.com/learn/learn-angularjs">
+
+                    <div class="card">
+
+                        Learn AngularJS 1.X
+
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.codecademy.com/learn/php">
+
+                    <div class="card">
+
+                        PHP
+
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="row extra-top-padding-60">
+            <h2 class="col-xs-12">
+                NewCircle Training
+
+            </h2>
+
+            <div class="col-sm-6 col-md-4">
+                <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">
+
+                    <div class="card">
+
+                        Android Bootcamp Series 2012
+
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </main>
+
+    <link rel="import" href="/shared/scripts.html">
+    <script src="/js/vendors/nunjucks.min.js"></script>
+    <script src="/js/vendors/spin.min.js"></script>
+    <script async src="/js/courses.js"></script>
 </body>
 
 </html>
