Update index's note

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 				</ul>
 
 				<h2>Note</h2>
-				<p>I'm using Google App Engine to host <a href="https://bader-sur.appspot.com/?note">my new web application</a> built using
-					Python so I rarely update this website.</p>
+				<p>I have another Python <a href="https://bader-sur.appspot.com/?note">web app</a> hosted on Google App Engine (for free!) which has a blog.</p>
 			</section>
 
 			<aside class="col-sm-4">
