Add Django to skills

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<h2>Skills</h2>
 				<ul>
 					<li>Creating RESTful APIs and responsive websites using HTML5, CSS3 (Bootstrap), JavaScript (Node, Express, Angular & jQuery),
-						Python (webapp2), C# (ASP.NET Core MVC) and PHP.
+						Python (Django, webapp2), C# (ASP.NET Core MVC) and PHP.
 					</li>
 					<li>Building native Android applications using Android Studio, XML and Java.</li>
 					<li>Designing/creating databases (MySQL, MS SQL Server 2014, SQLite, MongoDB & Google Datastore).</li>
